eks/keit_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keit-service
  namespace: keit
  labels:
      app: keit-service
spec:
  selector:
    app: keit-app 
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
